--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>Emuejevoke's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -42,7 +42,7 @@
 						<div class="inner">
 							<header class="major">
 								<h1>Emuejevoke Eshemitan</h1>
-								<h2>Data Scientist | Machine Learning Engineer</h2>
+								<h2>Data Scientist</h2>
 							</header>
 							<div class="content">
 								<p>
