--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<div class="inner">
 							<header class="major">
 								<h1>Emuejevoke Eshemitan</h1>
-								<h2>Data Scientist</h2>
+								<h2>Data Scientist | ML Engineer</h2>
 							</header>
 							<div class="content">
 								<p>
