--- a/author.html
+++ b/author.html
@@ -71,8 +71,8 @@
 										Machine Learning Professional Certificate and IBM Data Science Professional
 										Certificate. He is part of the 2000 people selected for the 2022 AWS AI & ML
 										scholarship program. He has also completed the Udacity’s AI Programming with
-										Python Nanodegree program. These programs have drastically helped in enhancing
-										my skills.
+										Python Nanodegree program. These programs has drastically helped in enhancing
+										his skills.
 									</p>
 									<p>
 										He is currently preparing for the DP-100 examination to get Microsoft certified
