--- a/author.html
+++ b/author.html
@@ -42,7 +42,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>About Author</h1>
+										<h1>About Me</h1>
 									</header>
 									<span class="image main"><img src="https://user-images.githubusercontent.com/96771321/215283364-b70943e9-056b-4c6a-b7cd-7a170b365349.jpg" alt="" /></span>
 									<p>
@@ -88,28 +88,6 @@
 
 					<section id="contact">
 						<div class="inner">
-							<section>
-								<form method="post" action="mailto:eshemitanvoke@gmail.com">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
 							<section class="split">
 								<section>
 									<div class="contact-method">
