--- a/landing4.html
+++ b/landing4.html
@@ -33,7 +33,7 @@
 							<li><a href="#contact">Contact</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#three" class="button primary fit">About Author</a></li>
+							<li><a href="#three" class="button primary fit">About Me</a></li>
 						</ul>
 					</nav>
 
@@ -136,7 +136,7 @@
 						<section id="three">
 								<div class="inner">
 									<header class="major">
-										<h2>About Author</h2>
+										<h2>About Me</h2>
 									</header>
 									<p>Emuejevoke Eshemitan is a  data enthusiast and  devoted python developer.
 										He is currently working as a freelancer in the data space, where he works
@@ -150,7 +150,7 @@
 										to automate predictive models.
 									</p>
 									<ul class="actions">
-										<li><a href="author.html" class="button next">more about author</a></li>
+										<li><a href="author.html" class="button next">more about me</a></li>
 									</ul>
 								</div>
 							</section>
@@ -161,28 +161,6 @@
 				<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
-							<section>
-								<form method="post" action="mailto:eshemitanvoke@gmail.com">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
 							<section class="split">
 								<section>
 									<div class="contact-method">
