--- a/landing2.html
+++ b/landing2.html
@@ -209,7 +209,7 @@
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
-										<h3>location</h3>
+										<h3>Location</h3>
 										<span>Lagos, Nigeria</span>
 									</div>
 								</section>
