--- a/landing5.html
+++ b/landing5.html
@@ -220,7 +220,7 @@
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
-										<h3>location</h3>
+										<h3>Location</h3>
 										<span>Lagos, Nigeria</span>
 									</div>
 								</section>
