--- a/author.html
+++ b/author.html
@@ -46,40 +46,44 @@
 									</header>
 									<span class="image main"><img src="https://user-images.githubusercontent.com/96771321/215283364-b70943e9-056b-4c6a-b7cd-7a170b365349.jpg" alt="" /></span>
 									<p>
-										Emuejevoke Eshemitan is a data enthusiast and devoted python developer.
-										He is currently working as a freelancer in the data space, where he works with
-										various teams and people from different regions around the world.
-										He is Proficient in programming with Python and using
-										frameworks like Pandas, Seaborn, Plotly, Scikit learn, OpenCV,
-										TensorFlow, amongst others. He is also competent with SQL.
-										As a Data Scientist, he develops strategies for analyzing and visualizing data,
-										building models with data using python programming language.
-										As a Machine Learning Engineer, he focuses on researching, building and running
-										artificial intelligence systems to automate predictive models.
+										I hold a Bachelor's degree in Mechanical Engineering, which has provided me with a strong
+										foundation in mathematics and a deep understanding of machine learning concepts. During my
+										time as a Data Analyst at Cleanpick Green Nigeria Limited, I worked extensively with data,
+                                        extracting valuable insights to support decision-making processes. I have pursued further
+										education through programs such as the Udacity Data Analytics Nanodegree, IBM Data Science
+										Professional Certificate, IBM Machine Learning Professional Certificate, and the AWS AI & ML
+										scholarship program.
+										<p>
+									</p>
+										Proficiency in Python programming is one of my key strengths, and I have practical experience
+										with popular frameworks like Pandas, Seaborn, Plotly, Scikit-learn, PyTorch, and TensorFlow.
+										Additionally, I have expertise in SQL and Google Cloud ML. Currently, I am actively engaged
+										as a Freelance Data Scientist at Upwork Inc., where I have successfully completed multiple
+										projects, all showcased on my portfolio website.
+										<p>
+									</p>
+										Throughout my career as a Machine Learning Engineer and Data Scientist, I have been involved
+										in the design, development, and implementation of various machine learning models to tackle
+										diverse problems. I am well-versed in tasks such as forecasting, model evaluation, providing
+										recommendations, uncovering patterns, improving data quality, and effectively communicating
+										insights to stakeholders. My skill set covers a wide range, including deep learning, recommender
+										systems, data analysis, data visualization, and web scraping.
+										<p>
+									</p>
+										To validate my expertise in machine learning, I have obtained certifications such as the Google
+										Cloud Machine Learning Professional, IBM Machine Learning Professional, and IBM Data Science
+										Professional. These certifications acknowledge my proficiency in a variety of machine learning
+										techniques, including unsupervised learning, supervised learning, deep learning, reinforcement
+										learning, time series analysis, and survival analysis.
+										<p>
+									</p>
+										Throughout my journey, I have completed numerous impactful projects, including Gender By Voice
+										(Clustering), Stranger Things 4 (Sentiment Analysis), Restaurant Ratings Prediction, House Prices
+										Prediction, Car Prices Prediction, Netflix Recommender System, Heart Failure Classifier, Nature
+										Scene Classifier, and Restaurants Recommender System and much more. Thank you for going through my portfolio
 									</p>
 									<p>
-										As an Engineering student at University of
-										Lagos, He has acquired math skills involving probability, statistics,
-										linear algebra and calculus. This made it easy for him to
-										understand the concepts of machine learning.
-										With the wide range of resources available on the internet, He
-										started his journey towards becoming a Data Scientist and
-										landed his first data related job as a Freelance Data Analyst for
-										Cleanpick Green Nigeria Limited, a startup company.
-										To gain more coding experience, He has completed the Udacity’s
-										Data Analytics Nanodegree program, Coursera’s IBM
-										Machine Learning Professional Certificate and IBM Data Science Professional
-										Certificate. He is part of the 2000 people selected for the 2022 AWS AI & ML
-										scholarship program. He has also completed the Udacity’s AI Programming with
-										Python Nanodegree program. These programs has drastically helped in enhancing
-										his skills.
-									</p>
-									<p>
-										He is currently preparing for the DP-100 examination to get Microsoft certified
-										as an Azure data scientist associate.
-									</p>
-									<p>
-										This information above was last updated in the year 2022.
+										This information above was last updated in the year 2023.
 									</p>
 								</div>
 							</section>
