--- a/landing5.html
+++ b/landing5.html
@@ -179,16 +179,16 @@
 									<header class="major">
 										<h2>About Me</h2>
 									</header>
-									<p>Emuejevoke Eshemitan is a  data enthusiast and  devoted python developer.
-										He is currently working as a freelancer in the data space, where he works
-										with various teams and people from different regions around the world.
-										</p><p>
-										As a Data Scientist, he develops strategies for analyzing and
-										visualizing data, building models with data using python programming language.
-										<br>
-										As a Machine Learning Engineer,
-										he focuses on researching, building and running artificial intelligence systems
-										to automate predictive models.
+									<p>
+										As a Machine Learning Engineer and Data Scientist, I hold a BSc in Mechanical
+										Engineering, providing a strong mathematical foundation for understanding machine
+										learning concepts. I have successfully worked as a Data Analyst at Cleanpick Green
+										Nigeria Limited, where I generated crucial insights for decision-making. With
+										completed programs and certifications in data analytics and machine learning, I
+										excel in Python and various frameworks. Currently, I am a Freelance Data Scientist
+										at Upwork Inc., delivering impactful projects. My expertise lies in designing and
+										implementing machine learning models, uncovering patterns, improving data quality,
+										and communicating insights to stakeholders.
 									</p>
 									<ul class="actions">
 										<li><a href="author.html" class="button next">more about me</a></li>
