--- a/landing.html
+++ b/landing.html
@@ -110,21 +110,24 @@
 												<h3>Ford GoBike</h3>
 											</header>
 											<p>
-												This dataset used in this project includes information about individual
-												rides made in a bike-sharing system covering the greater San Francisco
-												Bay Area for the month of February 2019. For this project, the data was made available by Udacity
-												<br>Click
-												<b>
-												<a href="https://davidsonity-ford-gobike-app-t7q2i4.streamlit.app/" >Here</a>
-												</b>to interact with deployment site.
-											<br>Some libraries used in this project includes:
+												The Ford GoBike Data Analysis project involved exploring and analyzing a dataset
+												from a bike-sharing system in the greater San Francisco Bay area. The dataset provided
+												information about individual rides made during February 2019.
+												<br>
+												The project included data cleaning to ensure data quality and integrity. Through
+												exploratory analysis, several key findings emerged. It was discovered that most rides
+												lasted around 10 minutes, with higher usage on weekdays during peak commuting hours.
+												The majority of riders were between the ages of 20 to 40, and male riders constituted
+												the largest group. Ride durations varied based on age, gender, and user type.
+												<br>
+												Insights also revealed longer rides during weekends, specific start stations with longer
+												ride durations, and age-related patterns in ride duration. The project included visualizations
+												using Plotly and interactive exploration through a dedicated web app.
+												<br>
+												Overall, the project provided valuable insights into the usage patterns and characteristics
+												of riders in the Ford GoBike system, facilitating a better understanding of bike-sharing
+												trends and user behavior.
 											</p>
-											<ul>
-												<li>Pandas</li>
-												<li>Numpy</li>
-												<li>Plotly</li>
-												<li>Streamlit</li>
-											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Davidsonity/Ford-GoBike" class="button">Learn more</a></li>
 											</ul>
