--- a/landing.html
+++ b/landing.html
@@ -110,23 +110,13 @@
 												<h3>Ford GoBike</h3>
 											</header>
 											<p>
-												The Ford GoBike Data Analysis project involved exploring and analyzing a dataset
-												from a bike-sharing system in the greater San Francisco Bay area. The dataset provided
-												information about individual rides made during February 2019.
-												<br>
-												The project included data cleaning to ensure data quality and integrity. Through
-												exploratory analysis, several key findings emerged. It was discovered that most rides
-												lasted around 10 minutes, with higher usage on weekdays during peak commuting hours.
-												The majority of riders were between the ages of 20 to 40, and male riders constituted
-												the largest group. Ride durations varied based on age, gender, and user type.
-												<br>
-												Insights also revealed longer rides during weekends, specific start stations with longer
-												ride durations, and age-related patterns in ride duration. The project included visualizations
-												using Plotly and interactive exploration through a dedicated web app.
-												<br>
-												Overall, the project provided valuable insights into the usage patterns and characteristics
-												of riders in the Ford GoBike system, facilitating a better understanding of bike-sharing
-												trends and user behavior.
+												The Ford GoBike Data Analysis project focuses on analyzing the Ford GoBike system,
+												a public bicycle-sharing program. The goal of the project is to gain insights from
+												the dataset, which contains information about bike trips, user types, and bike station
+												locations. By analyzing this data, the project aims to understand usage patterns, trip
+												durations, popular bike stations, and user demographics such as age and gender. The
+												analysis provides valuable information that can be used to optimize the bike-sharing
+												system, enhance user experiences, and make informed business decisions.
 											</p>
 											<ul class="actions">
 												<li><a href="https://github.com/Davidsonity/Ford-GoBike" class="button">Learn more</a></li>
