--- a/landing3.html
+++ b/landing3.html
@@ -114,21 +114,15 @@
 												<h3>Nature Scene Classifier</h3>
 											</header>
 											<p>
-												The objective of this project is to build powerful Deep Learning
-												Neural network that can classify images of buildings, forests,
-												glaciers, mountains, seas and streets with very good accuracy.
-												In this project we made use of transfer learning.
-												<br>Click
-												<b>
-												<a href="https://davidsonity-nature-scene-classifier-app-0f6zht.streamlit.app/" >Here</a>
-												</b>to interact with deployment site.
-											<br>Some libraries used in this project includes:
+												The Intel Image Classification project involves the classification of images into different
+												categories using deep learning techniques. The project focuses on a dataset provided by Intel,
+												which consists of images of various natural scenes such as buildings, forests, glaciers,
+												mountains, seas, and streets. The main objective of the project is to develop a deep learning
+												model capable of accurately classifying images into these predefined categories. By training
+												the model on a large dataset of labeled images, the project aims to achieve high accuracy in
+												predicting the correct category for new, unseen images. The Intel Image Classification project
+												has applications in image recognition, computer vision, and automated classification tasks.
 											</p>
-											<ul>
-												<li>TensorFlow</li>
-												<li>Numpy</li>
-												<li>Matplotlib</li>
-											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Davidsonity/Nature-Scene-Classifier" class="button">Learn more</a></li>
 											</ul>
