--- a/landing3.html
+++ b/landing3.html
@@ -86,18 +86,15 @@
 												<h3>Heart Failure Classifier</h3>
 											</header>
 											<p>
-												The objective of this project is to build machine learning models
-												to predict heart failure of a patient. This dataset contains the medical records
-												of 299 patients who had heart failure, collected during their follow-up
-												period, where each patient profile has 13 clinical features.
-											<br>Some libraries used in this project includes:
+												The Heart Failure Prediction project aims to develop a machine learning model for
+												accurately predicting heart failure in patients. By analyzing a dataset of 299 patients'
+												medical records, including 13 clinical features, the project explores various ML algorithms
+												and techniques. The best-performing model is selected based on evaluation metrics like recall
+												and F-score. The project's repository contains a Jupyter Notebook (`Heart_Failure.ipynb`) that
+												provides code, documentation, and step-by-step instructions. The project strives to provide
+												healthcare professionals with a reliable tool to improve patient outcomes and intervention
+												decisions.
 											</p>
-											<ul>
-												<li>Pandas</li>
-												<li>Numpy</li>
-												<li>Scikit-learn</li>
-												<li>Seaborn</li>
-											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Davidsonity/Heart_Failure" class="button">Learn more</a></li>
 											</ul>
