--- a/landing3.html
+++ b/landing3.html
@@ -136,22 +136,13 @@
 												<h3>Dog Breed Classifier</h3>
 											</header>
 											<p>
-												The objective of this project is to build powerful neural network that
-												can classify dogs according to their breeds. The dataset comprises 120
-												breeds of dogs. For this project, the top 10 most populated dog breed
-												in the dataset are used to train the model.
-												<br>Click
-												<b>
-												<a href="https://davidsonity-dogbreed-classifier-app-opihvk.streamlit.app/" >Here</a>
-												</b>to interact with deployment site.
-											<br>Some libraries used in this project includes:
+												The Dog Breed Prediction project utilizes deep learning techniques and transfer
+												learning to accurately classify dog breeds. By leveraging the Xception model and
+												a comprehensive dataset of dog images, the project aims to develop a powerful
+												neural network capable of identifying the top 10 most populated dog breeds with
+												high accuracy. The project provides a deployment site where users can upload dog
+												images and receive real-time predictions of the respective breed.
 											</p>
-											<ul>
-												<li>TensorFlow</li>
-												<li>Numpy</li>
-												<li>Matplotlib</li>
-												<li>sklearn</li>
-											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Davidsonity/DogBreed-Classifier" class="button">Learn more</a></li>
 											</ul>
