--- a/landing3.html
+++ b/landing3.html
@@ -111,14 +111,14 @@
 												<h3>Nature Scene Classifier</h3>
 											</header>
 											<p>
-												The Intel Image Classification project involves the classification of images into different
-												categories using deep learning techniques. The project focuses on a dataset provided by Intel,
-												which consists of images of various natural scenes such as buildings, forests, glaciers,
-												mountains, seas, and streets. The main objective of the project is to develop a deep learning
-												model capable of accurately classifying images into these predefined categories. By training
-												the model on a large dataset of labeled images, the project aims to achieve high accuracy in
-												predicting the correct category for new, unseen images. The Intel Image Classification project
-												has applications in image recognition, computer vision, and automated classification tasks.
+												The Nature Scene Classifier project utilizes transfer learning techniques to build a deep
+												learning neural network for accurately classifying images of natural scenes. The project
+												evaluates three pre-trained models and achieves an overall accuracy of 95.65%. It focuses
+												on a dataset provided by Intel, which includes images of buildings, forests, glaciers,
+												mountains, seas, and streets. A deployment site is available for users to upload their own
+												images for classification. The readme provides instructions for running the project and
+												highlights the potential applications in fields such as environmental monitoring, tourism,
+												and image organization.
 											</p>
 											<ul class="actions">
 												<li><a href="https://github.com/Davidsonity/Nature-Scene-Classifier" class="button">Learn more</a></li>
