--- a/landing.html
+++ b/landing.html
@@ -83,17 +83,14 @@
 											<header class="major">
 												<h3>WeRateDogs</h3>
 											</header>
-											<p>WeRateDogs is a Twitter account that rates people's dogs with a humorous
-												comment about the dog. This project involves gathering, assessing,
-												cleaning, analyzing and visualizing of data.
-											<br>Some libraries used in this project includes:
+											<p>The Twitter Data Wrangling and Analysis project involves gathering, assessing, cleaning,
+												and analyzing data from the Twitter platform. It focuses on the WeRateDogs Twitter
+												account's tweets. The project includes data wrangling, data analysis, and two reports:
+												Wrangle Report and Act Report. The goal is to clean the data, derive insights and
+												present key findings. The project's README file provides an overview, explains the
+												dataset, lists dependencies, and includes usage instructions. Overall, the project
+												showcases the importance of data preparation and analysis using real-world Twitter data.
 											</p>
-											<ul>
-												<li>Pandas</li>
-												<li>Numpy</li>
-												<li>Matplotlib</li>
-												<li>Seaborn</li>
-											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Davidsonity/WeRateDogs" class="button">Learn more</a></li>
 											</ul>
