--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 										<h3><a href="landing.html" class="link">Data Analysis | SQL</a></h3>
 										<p>WeRateDogs</p>
 										<p>Ford GoBike</p>
-										<p>SQL PROJECT</p>
+										<p>Chicago-Data-Insights</p>
 									</header>
 								</article>
 								<article>
