--- a/landing.html
+++ b/landing.html
@@ -66,7 +66,7 @@
 										<ul>
 											<li>WeRateDogs</li>
 											<li>Ford GoBike</li>
-											<li>SQL PROJECT</li>
+											<li>Chicago Data Insights</li>
 										</ul>
 									</header>
 								</div>
@@ -122,24 +122,23 @@
 									</div>
 								</section>
 								<section>
-									<a href="https://github.com/Davidsonity/SQL-FOR-RECRUITERS" class="image">
+									<a href="https://github.com/Davidsonity/Chicago-Data-Insights" class="image">
 										<img src="https://camo.githubusercontent.com/9e368fb02519eeb3a27b30d03b5621d130c902583ae6438cdd9552ce3b239da6/68747470733a2f2f7777772e6461746171756573742e696f2f77702d636f6e74656e742f75706c6f6164732f323032312f31312f7768792d73716c2d636f6e73756d65732d736f2d6d7563682d6d656d6f72792d6865616465722e77656270" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>SQL PROJECT</h3>
+												<h3>Chicago Data Insights</h3>
 											</header>
 											<p>
-												This project was made to show recruiters my competency with using SQL.
-												The following are the highlights of this project
-											<ul>
-												<li>Understand three Chicago datasets</li>
-												<li>Load the three datasets into three tables in a Db2 database</li>
-												<li>Execute SQL queries to answer various questions</li>
-											</ul>
+												The "Chicago Data Insights" is a project that utilizes SQL and Python to analyze
+												datasets related to socioeconomic indicators, schools, and crime in Chicago.
+												By exploring the data, the project aims to uncover insights into the relationships
+												between these factors. The findings are documented in a Jupyter Notebook for easy
+												interpretation.
+											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/Davidsonity/SQL-FOR-RECRUITERS" class="button">Learn more</a></li>
+												<li><a href="https://github.com/Davidsonity/Chicago-Data-Insights" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
