--- a/landing2.html
+++ b/landing2.html
@@ -85,21 +85,15 @@
 												<h3>Restaurant Ratings Prediction</h3>
 											</header>
 											<p>
-												The objective of this project is to build a machine learning model to predict
-												the rating of restaurants in Bangalore. The data is accurate to that
-												available on the zomato website until 15 March 2019.
-												<br>Click
-												<b>
-												<a href="https://davidsonity-restaurants-rating-prediction-app-qsszth.streamlitapp.com/" >Here</a>
-												</b>to interact with deployment site.
-											<br>Some libraries used in this project includes:
+												The Restaurants Rating Prediction project is a machine learning application that
+												predicts the ratings of restaurants in Bangalore. By leveraging a dataset obtained
+												from Zomato, the project trains a predictive model that takes into account factors
+												such as location, cuisine, restaurant type, average cost, and user reviews. The
+												goal is to provide users with accurate rating predictions, helping them make
+												informed decisions when selecting a restaurant. The project is deployed and
+												accessible through a user-friendly interface on the deployment site, allowing users
+												to input restaurant details and receive predicted ratings remotely.
 											</p>
-											<ul>
-												<li>Pandas</li>
-												<li>Numpy</li>
-												<li>Scikit-learn</li>
-												<li>Plotly</li>
-											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Davidsonity/Restaurants-Rating-Prediction" class="button">Learn more</a></li>
 											</ul>
