--- a/landing2.html
+++ b/landing2.html
@@ -110,16 +110,15 @@
 												<h3>House Prices Prediction</h3>
 											</header>
 											<p>
-												The objective of this project is to build a machine learning model to
-												predict sales prices and practice feature engineering, RFs, and
-												gradient boosting. This project involves Participation in Kaggle competition.
-											<br>Some libraries used in this project includes:
+												This project is a Kaggle competition focused on predicting the sales prices of
+												residential homes in Ames, Iowa. The dataset consists of 79 variables describing
+												various aspects of the houses. The goal is to develop regression models using
+												advanced techniques and creative feature engineering to accurately estimate the
+												sale prices. The competition evaluates submissions based on the Root-Mean-Squared-Error
+												(RMSE) metric. The provided Jupyter Notebook and dataset enable participants to
+												analyze and reproduce the results. This project is an opportunity to enhance regression
+												skills and gain experience in real-world predictive modeling.
 											</p>
-											<ul>
-												<li>Pandas</li>
-												<li>Numpy</li>
-												<li>Scikit-learn</li>
-											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Davidsonity/House-Prices-Prediction" class="button">Learn more</a></li>
 											</ul>
