--- a/landing2.html
+++ b/landing2.html
@@ -135,18 +135,14 @@
 												<h3>Car Prices Prediction</h3>
 											</header>
 											<p>
-												The objective of this project is to to produce a regression model for
-												predicting the selling price given the characteristics of the cars in the historical data given.
-												The dataset is a Car Sale Adverts dataset provided by AutoTrader(AT),
-												one of our industry partners. The dataset contains 12 features and over 40,000 observations an anonymised collection of adverts with information on vehicles such as brand, type, colour, mileage, as well as the selling price.
-											<br>Some libraries used in this project includes:
+												The Car Price Prediction project aims to develop a regression model to predict the
+												selling price of cars based on their characteristics. The project involves analyzing
+												a dataset of car sale adverts, performing data exploration and preprocessing,
+												conducting feature engineering, training regression models, and evaluating their
+												performance. The ultimate goal is to create an accurate model that can assist in
+												predicting car prices, providing valuable insights for car sellers, buyers, and
+												industry professionals.
 											</p>
-											<ul>
-												<li>Pandas</li>
-												<li>Numpy</li>
-												<li>Plotly</li>
-												<li>Scikit-learn</li>
-											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Davidsonity/Car-Price-Prediction" class="button">Learn more</a></li>
 											</ul>
