--- a/landing4.html
+++ b/landing4.html
@@ -83,19 +83,12 @@
 												<h3>Gender By Voice (Clustering)</h3>
 											</header>
 											<p>
-												The objective of this project is to use several unsupervised machine
-												learning algorithm to group voices. We would be focused on clustering
-												the dataset into male or female. Based upon acoustic properties of the
-												voice and speech. The dataset consists of 3,168 recorded voice samples,
-												collected from male and female speakers.
-											<br>Some libraries used in this project includes:
+												The Voice Gender Clustering project uses unsupervised machine learning to identify the
+												gender of a voice based on its acoustic properties. By clustering voice samples with
+												similar characteristics, the project distinguishes between male and female voices. It
+												provides a comprehensive report and insights into the effectiveness of different
+												clustering algorithms for gender identification.
 											</p>
-											<ul>
-												<li>Pandas</li>
-												<li>Numpy</li>
-												<li>Scikit-learn</li>
-												<li>Seaborn</li>
-											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Davidsonity/GenderByVoice" class="button">Learn more</a></li>
 											</ul>
