--- a/landing4.html
+++ b/landing4.html
@@ -65,7 +65,7 @@
 										<h2>Projects</h2>
 										<ul>
 											<li>Gender By Voice (Clustering)</li>
-											<li>Stranger Things 4 (Sentiment Analysis)</li>
+											<li>Sentistranger: Unveiling Twitter Sentiment for Stranger Things</li>
 										</ul>
 									</header>
 								</div>
@@ -102,21 +102,16 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Stranger Things 4 (Sentiment Analysis)</h3>
+												<h3>Sentistranger: Unveiling Twitter Sentiment for Stranger Things</h3>
 											</header>
 											<p>
-												The main objective of this project is to scrape and perform sentiment
-												analysis on tweets about the netflix series "stranger things - Season 4".
-											<br>Some libraries used in this project includes:
+												The project performs sentiment analysis on Twitter data related to the Netflix series
+												"Stranger Things." It uses webscraping to collects 50,000 recent tweets from the release
+												of Season 4's first half to the complete series release. Using the Transformers library
+												and Twitter-RoBERTa model, the sentiment of these tweets is analyzed. The Jupyter
+												Notebook guides users through the process and includes visualizations for insights. The
+												repository contains data, images, and a README file with setup instructions.
 											</p>
-											<ul>
-												<li>Transformers</li>
-												<li>Snscrape</li>
-												<li>Pandas</li>
-												<li>Numpy</li>
-												<li>Plotly</li>
-												<li>Wordcloud</li>
-											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Davidsonity/Sentiment-Analysis-StrangerThingsS4" class="button">Learn more</a></li>
 											</ul>
