--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 										<h3><a href="landing4.html" class="link">NLP | Clustering</a></h3>
 										<p>Gender By Voice</p>
 										<i>Sentiment Analysis:</i>
-										<p>stranger Things 4</p>
+										<p>Sentistranger</p>
 									</header>
 								</article>
 								<article>
