--- a/landing4.html
+++ b/landing4.html
@@ -65,7 +65,7 @@
 										<h2>Projects</h2>
 										<ul>
 											<li>Gender By Voice (Clustering)</li>
-											<li>Sentistranger: Unveiling Twitter Sentiment for Stranger Things</li>
+											<li>Sentistranger (Sentiment Analysis)</li>
 										</ul>
 									</header>
 								</div>
