--- a/landing4.html
+++ b/landing4.html
@@ -102,7 +102,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Sentistranger: Unveiling Twitter Sentiment for Stranger Things</h3>
+												<h3>Sentistranger (Sentiment Analysis)</h3>
 											</header>
 											<p>
 												The project performs sentiment analysis on Twitter data related to the Netflix series
