--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing4.html" class="link">NLP | Clustering</a></h3>
-										<p>Gender By Voice</p>
-										<i>Sentiment Analysis:</i>
-										<p>Sentistranger</p>
+										<h3><a href="landing4.html" class="link">Natural Language Processing</a></h3>
+										<p>InfoBot (Sonity AI Chatbot)</p>
+										<p>Sentistranger (Sentiment Analysis)</p>
+										<p>Gender By Voice (Clustering)</p>
 									</header>
 								</article>
 								<article>
