--- a/landing4.html
+++ b/landing4.html
@@ -45,11 +45,11 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>NLP | Clustering</h1>
+								<h1>Natural Language Processing</h1>
 							</header>
 							<div class="content">
 								<p>
-									This section contains projects that involve clustering and nlp algorithms.
+									This section contains projects that involve Natural Language Processing.
 								</p>
 							</div>
 						</div>
@@ -64,7 +64,7 @@
 									<header class="major">
 										<h2>Projects</h2>
 										<ul>
-											<li>Gender By Voice (Clustering)</li>
+											<li>InfoBot (SonityAI Chatbot)</li>
 											<li>Sentistranger (Sentiment Analysis)</li>
 										</ul>
 									</header>
@@ -74,23 +74,25 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="https://github.com/Davidsonity/GenderByVoice" class="image">
-										<img src="https://user-images.githubusercontent.com/96771321/188281821-76c88f8d-0cb4-4a8b-92b2-dcc5fb28ba13.png" alt="" data-position="center center" />
+									<a href="https://github.com/Davidsonity/SonityAI-InfoBotApp/tree/main" class="image">
+										<img src="https://user-images.githubusercontent.com/96771321/252466661-1642a2c3-0d80-4c67-bd47-9721548d5b20.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Gender By Voice (Clustering)</h3>
+												<h3>InfoBot (SonityAI Chatbot)</h3>
 											</header>
 											<p>
-												The Voice Gender Clustering project uses unsupervised machine learning to identify the
-												gender of a voice based on its acoustic properties. By clustering voice samples with
-												similar characteristics, the project distinguishes between male and female voices. It
-												provides a comprehensive report and insights into the effectiveness of different
-												clustering algorithms for gender identification.
+												InfoBot is an automated chatbot project that utilizes text classification and LSTM
+												techniques to provide instant responses to common questions about the project owner.
+												It aims to assist individuals who cannot directly reach the owner by offering
+												convenient access to basic information. With features like automated responses and
+												a deployed Streamlit app, InfoBot demonstrates the power of chatbots in streamlining
+												communication. Future enhancements include expanding the dataset and implementing
+												more advanced natural language processing.
 											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/Davidsonity/GenderByVoice" class="button">Learn more</a></li>
+												<li><a href="https://medium.com/@davidsonity/introducing-infobot-your-personal-information-assistant-a9fb8cb7da71" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
