--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
 										<h3><a href="landing4.html" class="link">Natural Language Processing</a></h3>
 										<p>InfoBot (Sonity AI Chatbot)</p>
 										<p>Sentistranger (Sentiment Analysis)</p>
-										<p>Gender By Voice (Clustering)</p>
 									</header>
 								</article>
 								<article>
@@ -121,9 +120,10 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing6.html" class="link">Web Scraping</a></h3>
+										<h3><a href="landing6.html" class="link">Web Scraping | Clustering</a></h3>
 										<p>Football Fixtures Scraper</p>
 										<p>Nike Web Scraper</p>
+										<p>Gender By Voice (Clustering)</p>
 									</header>
 								</article>
 							</section>
