--- a/landing5.html
+++ b/landing5.html
@@ -64,7 +64,7 @@
 									<header class="major">
 										<h2>Projects</h2>
 										<ul>
-											<li>GroupLens Movies Recommender</li>
+											<li>MovieLens Recommender+</li>
 											<li>Restaurants Recommender System</li>
 											<li>Netflix Recommender System</li>
 										</ul>
@@ -81,26 +81,19 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>GroupLens Movies Recommender</h3>
+												<h3>MovieLens Recommender+</h3>
 											</header>
 											<p>
-												The main objective of this project is to build a movies recommendation
-												system for unique users using User Profile and Movie Genres. These data
-												were created by 610 users between March 29, 1996 and September 24, 2018
-												<br>Click
-												<b>
-												<a href="https://davidsonity-grouplens-movies-recommender-app-m9dj9x.streamlitapp.com/" >Here</a>
-												</b>to interact with deployment site.
-											<br>Some libraries used in this project includes:
+												The project is a collaborative filtering-based movie recommender system that suggests
+												personalized movie recommendations to users based on their past movie ratings. It uses
+												the k-Nearest Neighbors (k-NN) algorithm in a user-based collaborative filtering approach.
+												The web application allows users to input their user ID and receive top-10 movie
+												recommendations tailored to their movie preferences. Users can explore the recommended
+												movies' titles, genres, and movie posters. The project aims to provide an interactive
+												platform for users to discover new and exciting movies that align with their interests.
 											</p>
-											<ul>
-												<li>Pandas</li>
-												<li>Numpy</li>
-												<li>Scikit-learn</li>
-												<li>Streamlit</li>
-											</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/Davidsonity/GroupLens-Movies-Recommender" class="button">Learn more</a></li>
+												<li><a href="https://github.com/Davidsonity/MovieLens-Recommender" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
@@ -180,15 +173,18 @@
 										<h2>About Me</h2>
 									</header>
 									<p>
-										As a Machine Learning Engineer and Data Scientist, I hold a BSc in Mechanical
-										Engineering, providing a strong mathematical foundation for understanding machine
-										learning concepts. I have successfully worked as a Data Analyst at Cleanpick Green
-										Nigeria Limited, where I generated crucial insights for decision-making. With
-										completed programs and certifications in data analytics and machine learning, I
-										excel in Python and various frameworks. Currently, I am a Freelance Data Scientist
-										at Upwork Inc., delivering impactful projects. My expertise lies in designing and
-										implementing machine learning models, uncovering patterns, improving data quality,
-										and communicating insights to stakeholders.
+										Hello, I'm Emuejevoke Eshemitan, a passionate data professional specializing in Machine
+										Learning Engineering and Data Science. My portfolio showcases projects reflecting my
+										dedication to leveraging data for insightful and innovative solutions.
+										<br>
+										As a Machine Learning Engineer, I excel in designing cutting-edge models using TensorFlow and
+										scikit-learn, building scalable data pipelines, and deploying them in production
+										environments.
+										<br>
+										As a Data Scientist, I analyze valuable patterns, develop predictive
+										models, and communicate insights through impactful visualizations.
+										<br>
+										Let's collaborate on a data-driven journey! Explore my portfolio for more.
 									</p>
 									<ul class="actions">
 										<li><a href="author.html" class="button next">more about me</a></li>
