--- a/landing2.html
+++ b/landing2.html
@@ -158,15 +158,18 @@
 										<h2>About Me</h2>
 									</header>
 									<p>
-										As a Machine Learning Engineer and Data Scientist, I hold a BSc in Mechanical
-										Engineering, providing a strong mathematical foundation for understanding machine
-										learning concepts. I have successfully worked as a Data Analyst at Cleanpick Green
-										Nigeria Limited, where I generated crucial insights for decision-making. With
-										completed programs and certifications in data analytics and machine learning, I
-										excel in Python and various frameworks. Currently, I am a Freelance Data Scientist
-										at Upwork Inc., delivering impactful projects. My expertise lies in designing and
-										implementing machine learning models, uncovering patterns, improving data quality,
-										and communicating insights to stakeholders.
+										Hello, I'm Emuejevoke Eshemitan, a passionate data professional specializing in Machine
+										Learning Engineering and Data Science. My portfolio showcases projects reflecting my
+										dedication to leveraging data for insightful and innovative solutions.
+										<br>
+										As a Machine Learning Engineer, I excel in designing cutting-edge models using TensorFlow and
+										scikit-learn, building scalable data pipelines, and deploying them in production
+										environments.
+										<br>
+										As a Data Scientist, I analyze valuable patterns, develop predictive
+										models, and communicate insights through impactful visualizations.
+										<br>
+										Let's collaborate on a data-driven journey! Explore my portfolio for more.
 									</p>
 									<ul class="actions">
 										<li><a href="author.html" class="button next">more about me</a></li>
