--- a/landing4.html
+++ b/landing4.html
@@ -115,7 +115,7 @@
 												repository contains data, images, and a README file with setup instructions.
 											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/Davidsonity/Sentiment-Analysis-StrangerThingsS4" class="button">Learn more</a></li>
+												<li><a href="https://medium.com/@davidsonity/sentistranger-sentiment-analysis-twitter-reactions-to-stranger-things-season-4-95d81cbd6cce" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
