--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 									<header class="major">
 										<h3><a href="landing5.html" class="link">Recommendation System</a></h3>
 										<p>MovieLens Recommender+</p>
-										<p>Restaurants recommender system</p>
+										<p>FoodieFinders</p>
 										<p>Netflix recommender system</p>
 									</header>
 								</article>
